--- a/goldmsi5.html
+++ b/goldmsi5.html
@@ -69,7 +69,10 @@ var subject_id = prompt("Enter Participant Number");
 	likert_page5, 
         instrument_block,
         age_block,
-        gender_block
+        gender_block,
+	nationality_block,
+	formative_block,
+	currentcountry_block
 ],
 // These last two lines here say that we want to have the experiment be full screen
 // And that we want to show our participant the progress bar.
